--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   "homepage": "https://github.com/vaibhav93/demo_material#readme",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-connect": "^2.2.0",
     "gulp-jshint": "^1.12.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-requirejs": "^0.1.3",
     "gulp-requirejs-optimize": "^0.3.0",
+    "gulp-scp2": "^0.2.0",
     "gulp-util": "^3.0.7",
     "jshint-stylish": "^2.1.0"
   },
